--- a/index.html
+++ b/index.html
@@ -12,15 +12,23 @@
 
 <body>
     <div class="container">
-        <h1>Form Basics</h1>
+        <h1>Shipping Form</h1>
         <hr>
         <form action="http://www.w3schools.com/tags/demo_form.asp" method="get">
+            First Name:<input type="text" name="First Name"> <br>
 
-            Name:
-            <input type="text" name="name"><br> E-mail:
-            <input type="email" name="email"><br>
+
 
             <!--add your own inputs below-->
+
+            Last Name: <input type="text" name="name"><br> City <input type="text" name="city"> <br> Address: <input type="text" name="adress"><br> Zip Code <input typ
+            ="text" name="zipcode"><br> Credit Card
+            <input type="text" name="credit card"><br> Type Of Card: <br>
+            <input type="radio" name="credit card" value="visa"> Visa<br>
+            <input type="radio" name="credit card" value="mastercard"> Mastercard<br>
+            <input type="radio" name="credit card" value="american express"> American Express<br>
+            <input type="radio" name="credit card" value="discover"> Discover<br>
+
 
 
 
