--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
             <!--add your own inputs below-->
 
-            Last Name: <input type="text" name="name"><br> City <input type="text" name="city"> <br> Address: <input type="text" name="adress"><br> Zip Code <input typ
-            ="text" name="zipcode"><br> Credit Card
+            Last Name: <input type="text" name="name"><br> City: <input type="text" name="city"> <br> Address: <input type="text" name="adress"><br> Zip Code: <input typ
+            ="text" name="zipcode"><br> Credit Card:
             <input type="text" name="credit card"><br> Type Of Card: <br>
             <input type="radio" name="credit card" value="visa"> Visa<br>
             <input type="radio" name="credit card" value="mastercard"> Mastercard<br>
